--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">STARTSIDA</a>
             <a href="about.html">ARBETSPROCESS</a>
             <a href="bilder.html">BILDER</a>
+            <a href="kurs.html">KURSER</a>
         </div>
 
     <div class="mobile-icons">
@@ -29,19 +30,9 @@
             <a href="index.html">STARTSIDA</a>
             <a href="about.html">ARBETSPROCESS</a>
             <a href="bilder.html">BILDER</a>
+            <a href="kurs.html">KURSER</a>
     
         </div> 
-
-            <script>
-                function openNav() {
-                  document.getElementById("menu").style.width = "250px";
-
-                }
-                
-                function closeNav() {
-                  document.getElementById("menu").style.width = "0";
-                }
-                </script>
 
 <div class="start-heading">
     <h2>Moment 1 i kursen Frontend-baserad webbutveckling (DT211G)  </h2>
