--- a/src/about.html
+++ b/src/about.html
@@ -16,6 +16,7 @@
             <a href="index.html">STARTSIDA</a>
             <a href="about.html">ARBETSPROCESS</a>
             <a href="bilder.html">BILDER</a>
+            <a href="kurs.html">KURSER</a>
             </a>
         </div>
 
@@ -31,6 +32,7 @@
             <a href="index.html">STARTSIDA</a>
             <a href="about.html">ARBETSPROCESS</a>
             <a href="bilder.html">BILDER</a>
+            <a href="kurs.html">KURSER</a>
             </a> 
             
         </div> 
